# DevTaskMcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: setup.sh
skills/devtask-doit/: SKILL.md
skills/devtask-gcf/: SKILL.md
skills/devtask-grill/: SKILL.md
skills/devtask-plan/: SKILL.md
skills/devtask-review/: SKILL.md
skills/devtask-setup/: SKILL.md
skills/devtask-simple/: SKILL.md
skills/devtask-verify/: SKILL.md
src/devtask-mcp/: __init__.py  client.py  models.py  server.py
src/devtask_mcp/: __init__.py  client.py  models.py  server.py
