[project]
name = "devtask-mcp"
version = "1.5.0"
description = "MCP server exposing your kanocifer.chat dev-task API as tools for agents."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.4",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devtask_mcp"]
